{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 81,
  "lineage": "353590de-17b1-4ece-af55-0af518575488",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0522ab6e1ddcc7055",
            "arn": "arn:aws:ec2:ap-south-1:730335419572:instance/i-0bacba94267fdfcf9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bacba94267fdfcf9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a23a22907616ddec",
            "private_dns": "ip-192-168-1-164.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.164",
            "public_ip": "65.0.98.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0657597186149e158",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04aacda54907ff674",
            "tags": {
              "Name": "NEW-TEST-SERVER"
            },
            "tags_all": {
              "Name": "NEW-TEST-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0106a0e408bf15c15"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.pubsub1",
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335419572:internet-gateway/igw-09716a8b2f1d65198",
            "id": "igw-09716a8b2f1d65198",
            "owner_id": "730335419572",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0d0296ade7faf8fad"
          },
          "dependencies": [
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335419572:loadbalancer/app/ALB/1f39eda3f13327c4",
            "arn_suffix": "app/ALB/1f39eda3f13327c4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-78758998.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335419572:loadbalancer/app/ALB/1f39eda3f13327c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0106a0e408bf15c15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04aacda54907ff674"
              },
              {
                "subnet_id": "subnet-0f067f7d6f8ec0f28"
              }
            ],
            "subnets": [
              "subnet-04aacda54907ff674",
              "subnet-0f067f7d6f8ec0f28"
            ],
            "tags": {
              "Name": "ALB"
            },
            "tags_all": {
              "Name": "ALB"
            },
            "vpc_id": "vpc-0d0296ade7faf8fad",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335419572:targetgroup/TG/2d677bdf84f51c56",
            "arn_suffix": "targetgroup/TG/2d677bdf84f51c56",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335419572:targetgroup/TG/2d677bdf84f51c56",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:730335419572:loadbalancer/app/ALB/1f39eda3f13327c4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d0296ade7faf8fad"
          },
          "dependencies": [
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TGA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335419572:targetgroup/TG/2d677bdf84f51c56-20240926074306032500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:730335419572:targetgroup/TG/2d677bdf84f51c56",
            "target_id": "i-0bacba94267fdfcf9"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.TG",
            "aws_security_group.allow_tls",
            "aws_subnet.pubsub1",
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335419572:route-table/rtb-0539671e050dcb81d",
            "id": "rtb-0539671e050dcb81d",
            "owner_id": "730335419572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09716a8b2f1d65198",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubRT"
            },
            "tags_all": {
              "Name": "pubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0296ade7faf8fad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f8de2bb0dfde4e8",
            "route_table_id": "rtb-0539671e050dcb81d",
            "subnet_id": "subnet-04aacda54907ff674"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.pubRT",
            "aws_subnet.pubsub1",
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef6fcd379efe4349",
            "route_table_id": "rtb-0539671e050dcb81d",
            "subnet_id": "subnet-0f067f7d6f8ec0f28"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.pubRT",
            "aws_subnet.pubsub2",
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335419572:security-group/sg-0106a0e408bf15c15",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0106a0e408bf15c15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "730335419572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-VPC-ELB_SG"
            },
            "tags_all": {
              "Name": "EC2-VPC-ELB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0296ade7faf8fad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335419572:subnet/subnet-04aacda54907ff674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aacda54907ff674",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub1"
            },
            "tags_all": {
              "Name": "pubsub1"
            },
            "vpc_id": "vpc-0d0296ade7faf8fad"
          },
          "dependencies": [
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335419572:subnet/subnet-0f067f7d6f8ec0f28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f067f7d6f8ec0f28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub2"
            },
            "tags_all": {
              "Name": "pubsub2"
            },
            "vpc_id": "vpc-0d0296ade7faf8fad"
          },
          "dependencies": [
            "aws_vpc.MYVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MYVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335419572:vpc/vpc-0d0296ade7faf8fad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-091b42194416572f4",
            "default_route_table_id": "rtb-0d74e0a9bb3e0a798",
            "default_security_group_id": "sg-05bdefb1329e8069f",
            "dhcp_options_id": "dopt-0fe8d4df559a85e69",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0296ade7faf8fad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d74e0a9bb3e0a798",
            "owner_id": "730335419572",
            "tags": {
              "Name": "MYVPC"
            },
            "tags_all": {
              "Name": "MYVPC"
            }
          }
        }
      ]
    }
  ]
}